fix(header-mobile, prefeitura): correção na visibilidade de elementos

--- a/front-end/src/app/app.component.sass
+++ b/front-end/src/app/app.component.sass
@@ -24,6 +24,7 @@ app-sidebar-left
 
 app-main-content
   grid-column: 2 / 3
+  overflow: hidden
 
 app-sidebar-right
   grid-column: 3 /4
