--- a/front-end/src/app/components/header-mobile/header-mobile.component.sass
+++ b/front-end/src/app/components/header-mobile/header-mobile.component.sass
@@ -157,6 +157,7 @@ nav
   padding: 7px 14px
   justify-content: space-between
   border-radius: 20px
+  z-index: 999
   
   .containerUserImg 
     width: 25px
@@ -181,6 +182,7 @@ button
   width: 40px
   right: 10%
   border-radius: 50%
+  z-index: 999
   
   i
     border: 3px solid white
